@@ -4,6 +4,7 @@
    postfix = '_WanT'
    work_dir = './'
    datatype = 'modulus'
+   output_fmt = 'plt'
    wann = '1-3,6'
    nrzl = -32
    nrzh =  32
